--- a/i18n/sv.json
+++ b/i18n/sv.json
@@ -2,6 +2,7 @@
 	"@metadata": {
 		"authors": [
 			"Sabelöga",
+			"Stefan2255",
 			"WikiPhoenix"
 		]
 	},
@@ -10,7 +11,7 @@
 	"forms-createforminstance-form-name": "Skapa $1",
 	"formeditor": "Formulärredigerare",
 	"forms-api-get-definitions-no-name": "Namnparameter måste anges för \"get-definition\"",
-	"forms-api-get-definitions-not-exist": "Definition \"$1\" finns inte",
+	"forms-api-get-definitions-not-exist": "Formuläret \"$1\" finns inte.",
 	"forms-target-json-page-summary": "Redigera via formulär: $1",
 	"forms-error-no-form-specified": "Inget formulär har angetts",
 	"forms-form-edit-title": "Redigera $1",
@@ -83,5 +84,39 @@
 	"right-forms-edit-form-definition": "Redigera formulärdefinitioner",
 	"action-forms-create-form": "skapa formulär",
 	"action-forms-edit-form-definition": "eedigera formulärdefinitioner",
-	"forms-form-editor-prop-showformname": "Visa formulärnamn"
+	"forms-form-editor-prop-showformname": "Visa formulärnamn",
+	"editwithform": "Redigera med formulär",
+	"editwithform-with-title": "Redigera med formulär: $1",
+	"forms-label-facilities": "Faciliteter",
+	"forms-label-facilities-radio": "Faciliteter radio",
+	"apihelp-forms-form-submit-param-data": "Uppgifter som skickats in via formuläret",
+	"apihelp-forms-form-submit-param-form": "Formulärets namn",
+	"apihelp-forms-form-submit-param-target": "Målets namn",
+	"apihelp-forms-form-submit-param-summary": "Redigeringssammanfattning",
+	"apihelp-forms-get-definitions-param-definitiontype": "Begärd typ av formulärdefinition",
+	"apihelp-forms-get-definitions-param-name": "Namn på formulärdefinitionen",
+	"apihelp-forms-get-definitions-param-type": "Typ av begäran. Kan vara 'query-available' eller 'get-definition'",
+	"apihelp-forms-get-definitions-param-validfortime": "Tid för vilken formdefinitionen är giltig",
+	"forms-action-editsource": "Redigera källa",
+	"forms-form-editor-prop-rl-deps": "Beroenden för resursinläsare",
+	"forms-form-editor-prop-rl-deps-help": "Ange en lista över ResourceLoader-moduler som ska läsas in när formuläret instansieras",
+	"forms-form-editor-prop-targettypeemail": "E-post",
+	"forms-form-editor-prop-target-email-receiver": "Mottagare",
+	"forms-form-editor-prop-target-email-subject": "Ämne",
+	"forms-form-editor-prop-target-email-body": "Innehåll",
+	"forms-error-target-mail-send-failed": "Skicka mejl misslyckats",
+	"forms-error-target-mail-no-mail": "Ingen giltig e-postadress tillgänglig",
+	"forms-editor-create-form-label": "Skapa formulär",
+	"forms-editor-toolbar-cancel": "Avbryt",
+	"forms-editor-toolbar-save-label": "Spara",
+	"forms-editor-toolbar-done": "Klart",
+	"forms-editor-group-empty-help": "Formuläret har för närvarande inga element. Öppna fliken \"Formulärelement\" och dra elementen hit",
+	"forms-form-editor-form-props-summary-label": "Sammanfattning",
+	"forms-form-editor-form-props-summary-placeholder": "Beskriv vad du har ändrat",
+	"forms-target-page-label": "Målsida",
+	"forms-editor-create-form-instance-label": "Skapa med hjälp av det här formuläret",
+	"forms-form-definition-label": "Formulär att använda",
+	"forms-page-already-exists-no-form": "Den här sidan finns redan, men skapades inte av ett formulär.",
+	"forms-definitions-not-exist": "Formuläret \"$1\" finns inte.",
+	"forms-action-edit-with-form": "Redigera med formulär"
 }
