--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -3,6 +3,7 @@
 		"authors": [
 			"GuoPC",
 			"LittlePaw365",
+			"Peterxy12",
 			"沈澄心"
 		]
 	},
@@ -60,5 +61,46 @@
 	"forms-editor-toolbar-done": "完成",
 	"forms-form-editor-form-props-summary-label": "摘要",
 	"forms-form-editor-form-props-summary-placeholder": "描述您的更改",
-	"forms-form-editor-prop-showformname": "显示表单名称"
+	"forms-form-editor-prop-showformname": "显示表单名称",
+	"forms-desc": "MediaWiki的全能表单框架",
+	"editwithform": "使用表单编辑",
+	"editwithform-with-title": "使用表单编辑：$1",
+	"forms-form-editor-prop-buttonsfloat": "浮动按钮",
+	"forms-form-editor-prop-enableprogresssave": "启用中间保存",
+	"forms-form-editor-prop-enableeditsummary": "启用编辑摘要",
+	"forms-form-editor-prop-includable": "包含",
+	"forms-form-editor-prop-targetafteractiontype": "操作后类型",
+	"forms-form-editor-prop-targetafteractiontypecallback": "回呼",
+	"forms-form-editor-prop-targetafteractionurl": "重定向到URL",
+	"forms-form-editor-prop-extends": "扩展表单",
+	"forms-form-editor-prop-use-form-revs": "保持跟踪修订",
+	"forms-label-contacts": "联系人",
+	"forms-label-show-contacts": "显示联系人",
+	"forms-label-show-address": "显示地址",
+	"forms-label-sales": "销售量",
+	"forms-label-production": "生产",
+	"forms-label-hq-address": "总部",
+	"forms-label-street": "街道",
+	"forms-label-hq-address-billing": "是账单地址吗？",
+	"forms-label-facilities": "设施",
+	"forms-label-management": "管理",
+	"forms-label-warehouse": "仓库",
+	"forms-label-facilities-radio": "设施收音机",
+	"forms-title-new-customer": "新客户",
+	"forms-form-editor-prop-targettypetemplate": "模板",
+	"forms-form-editor-prop-targettemplate": "使用的模板",
+	"forms-form-editor-target-template-field": "模板字段",
+	"forms-form-editor-target-template-field-manual": "（手动）",
+	"apihelp-forms-form-submit-param-form": "表单名称",
+	"apihelp-forms-form-submit-param-target": "目标名称",
+	"apihelp-forms-form-submit-param-summary": "编辑摘要",
+	"apihelp-forms-form-submit-summary": "通过表单提供编辑",
+	"apihelp-forms-get-definitions-param-definitiontype": "请求的表单定义类型",
+	"apihelp-forms-get-definitions-param-name": "表单定义名称",
+	"forms-action-editsource": "编辑来源",
+	"forms-editor-toolbar-save-label": "保存",
+	"forms-target-page-label": "目标页面",
+	"forms-editor-create-form-instance-label": "使用此表单创建",
+	"forms-form-definition-label": "要使用的表单",
+	"forms-action-edit-with-form": "用表单编辑"
 }
