Sync I18N from master

--- a/i18n/sv.json
+++ b/i18n/sv.json
@@ -2,8 +2,8 @@
 	"@metadata": {
 		"authors": [
 			"Sabelöga",
-			"WikiPhoenix",
-			"Stefan2255"
+			"Stefan2255",
+			"WikiPhoenix"
 		]
 	},
 	"forms-desc": "Allsidigt formulärramverk för MediaWiki",
