--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -3,8 +3,8 @@
 		"authors": [
 			"GuoPC",
 			"LittlePaw365",
-			"沈澄心",
-			"Peterxy12"
+			"Peterxy12",
+			"沈澄心"
 		]
 	},
 	"forms-desc": "MediaWiki的全能表单框架",
