--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -102,5 +102,23 @@
 	"forms-target-page-label": "目标页面",
 	"forms-editor-create-form-instance-label": "使用此表单创建",
 	"forms-form-definition-label": "要使用的表单",
-	"forms-action-edit-with-form": "用表单编辑"
+	"forms-action-edit-with-form": "用表单编辑",
+	"forms-api-get-definitions-no-name": "必须为类型“get-definition”设置名称参数",
+	"forms-edit-error-form-sealed": "此表单已密封，所以无法编辑。",
+	"forms-api-form-submit-invalid-target": "此表单的目标无效",
+	"forms-error-form-mismatch": "由于表单名称不匹配，保存失败。",
+	"forms-form-editor-prop-sealaftercreation": "创建后密封",
+	"forms-form-editor-prop-use-form-revs-help": "如果设置成true，使用此表单所创建的所有表单实例将会记住在创建实例时的表单状态。表单定义的更新不会套用到在更新前所创建的实例。",
+	"forms-form-meta-tag": "使用表单[[$1]]所创建（修订：$2）",
+	"forms-form-editor-button-import-template": "从模板导入字段",
+	"forms-form-editor-confirm-import-template": "这将删除表单中所有的目前字段，并将它们替换成从所选模板导入的字段。您确定要继续吗？",
+	"apihelp-forms-form-submit-param-data": "表单提交的数据",
+	"apihelp-forms-get-definitions-param-type": "请求类型。可以是“query-available”或“get-definition”。",
+	"apihelp-forms-get-definitions-param-validfortime": "表单定义为有效期限",
+	"apihelp-forms-get-definitions-summary": "提供查询现有表单定义",
+	"forms-form-editor-prop-rl-deps": "资源载入器依赖",
+	"forms-form-editor-prop-rl-deps-help": "指定当表单实例化时，应被载入的ResourceLoader模组清单",
+	"forms-editor-group-empty-help": "表单目前没有元素。请开启“表单元素”标签，并将元素拖曳至此处",
+	"forms-page-already-exists-no-form": "此页面已存在，但不是由表单创建的。",
+	"forms-definitions-not-exist": "表单“$1”不存在。"
 }
